RedFoxAssembly/Antlr/Output/RedFoxAssemblyParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.11.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Input/RedFoxAssembly.g4 by ANTLR 4.11.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace RedFoxAssembly.AntlrBuild {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.11.1")]
[System.CLSCompliant(false)]
public partial class RedFoxAssemblyParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		Label=1, Width=2, Value=3, HLT=4, NOP=5, ADD=6, SUB=7, LSL=8, LSR=9, NEG=10, 
		NOT=11, CMP=12, JMP=13, BFG=14, BSR=15, RTN=16, RRB=17, RRW=18, RMB=19, 
		RMW=20, WRB=21, WRW=22, WMB=23, WMW=24, RVB=25, RVW=26, SIN=27, INT=28, 
		SFG=29, AND=30, LOR=31, XOR=32, Underscore=33, Quote=34, Comma=35, Number=36, 
		ByteLetter=37, Identifier=38;
	public const int
		RULE_program = 0, RULE_configuration = 1, RULE_width = 2, RULE_value = 3, 
		RULE_command = 4, RULE_label = 5, RULE_instruction = 6, RULE_hlt = 7, 
		RULE_nop = 8, RULE_add = 9, RULE_sub = 10, RULE_lsl = 11, RULE_lsr = 12, 
		RULE_neg = 13, RULE_not = 14, RULE_cmp = 15, RULE_jmp = 16, RULE_bfg = 17, 
		RULE_bsr = 18, RULE_rtn = 19, RULE_rrb = 20, RULE_rrw = 21, RULE_rmb = 22, 
		RULE_rmw = 23, RULE_wrb = 24, RULE_wrw = 25, RULE_wmb = 26, RULE_wmw = 27, 
		RULE_rvb = 28, RULE_rvw = 29, RULE_sin = 30, RULE_int = 31, RULE_sfg = 32, 
		RULE_and = 33, RULE_lor = 34, RULE_xor = 35, RULE_word = 36, RULE_byte = 37, 
		RULE_bytedata = 38;
	public static readonly string[] ruleNames = {
		"program", "configuration", "width", "value", "command", "label", "instruction", 
		"hlt", "nop", "add", "sub", "lsl", "lsr", "neg", "not", "cmp", "jmp", 
		"bfg", "bsr", "rtn", "rrb", "rrw", "rmb", "rmw", "wrb", "wrw", "wmb", 
		"wmw", "rvb", "rvw", "sin", "int", "sfg", "and", "lor", "xor", "word", 
		"byte", "bytedata"
	};

	private static readonly string[] _LiteralNames = {
		null, "'::'", "'.width'", "'.value'", "'HLT'", "'NOP'", "'ADD'", "'SUB'", 
		"'LSL'", "'LSR'", "'NEG'", "'NOT'", "'CMP'", "'JMP'", "'BFG'", "'BSR'", 
		"'RTN'", "'RRB'", "'RRW'", "'RMB'", "'RMW'", "'WRB'", "'WRW'", "'WMB'", 
		"'WMW'", "'RVB'", "'RVW'", "'SIN'", "'INT'", "'SFG'", "'AND'", "'LOR'", 
		"'XOR'", "'_'", "'''", "','"
	};
	private static readonly string[] _SymbolicNames = {
		null, "Label", "Width", "Value", "HLT", "NOP", "ADD", "SUB", "LSL", "LSR", 
		"NEG", "NOT", "CMP", "JMP", "BFG", "BSR", "RTN", "RRB", "RRW", "RMB", 
		"RMW", "WRB", "WRW", "WMB", "WMW", "RVB", "RVW", "SIN", "INT", "SFG", 
		"AND", "LOR", "XOR", "Underscore", "Quote", "Comma", "Number", "ByteLetter", 
		"Identifier"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "RedFoxAssembly.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static RedFoxAssemblyParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public RedFoxAssemblyParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public RedFoxAssemblyParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		public ConfigurationContext _configuration;
		public IList<ConfigurationContext> _configurations = new List<ConfigurationContext>();
		public CommandContext _command;
		public IList<CommandContext> _commands = new List<CommandContext>();
		public IToken eof;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(RedFoxAssemblyParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ConfigurationContext[] configuration() {
			return GetRuleContexts<ConfigurationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConfigurationContext configuration(int i) {
			return GetRuleContext<ConfigurationContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CommandContext[] command() {
			return GetRuleContexts<CommandContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public CommandContext command(int i) {
			return GetRuleContext<CommandContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRedFoxAssemblyListener typedListener = listener as IRedFoxAssemblyListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRedFoxAssemblyListener typedListener = listener as IRedFoxAssemblyListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRedFoxAssemblyVisitor<TResult> typedVisitor = visitor as IRedFoxAssemblyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 79;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 78;
				_localctx._configuration = configuration();
				_localctx._configurations.Add(_localctx._configuration);
				}
				}
				State = 81;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==Width || _la==Value );
			State = 84;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 83;
				_localctx._command = command();
				_localctx._commands.Add(_localctx._command);
				}
				}
				State = 86;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( ((_la) & ~0x3f) == 0 && ((1L << _la) & 8589934578L) != 0 );
			State = 88;
			_localctx.eof = Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ConfigurationContext : ParserRuleContext {
		public ConfigurationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_configuration; } }
	 
		public ConfigurationContext() { }
		public virtual void CopyFrom(ConfigurationContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class WidthConfigurationContext : ConfigurationContext {
		[System.Diagnostics.DebuggerNonUserCode] public WidthContext width() {
			return GetRuleContext<WidthContext>(0);
		}
		public WidthConfigurationContext(ConfigurationContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRedFoxAssemblyListener typedListener = listener as IRedFoxAssemblyListener;
			if (typedListener != null) typedListener.EnterWidthConfiguration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRedFoxAssemblyListener typedListener = listener as IRedFoxAssemblyListener;
			if (typedListener != null) typedListener.ExitWidthConfiguration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRedFoxAssemblyVisitor<TResult> typedVisitor = visitor as IRedFoxAssemblyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitWidthConfiguration(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ValueConfigurationContext : ConfigurationContext {
		[System.Diagnostics.DebuggerNonUserCode] public ValueContext value() {
			return GetRuleContext<ValueContext>(0);
		}
		public ValueConfigurationContext(ConfigurationContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRedFoxAssemblyListener typedListener = listener as IRedFoxAssemblyListener;
			if (typedListener != null) typedListener.EnterValueConfiguration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRedFoxAssemblyListener typedListener = listener as IRedFoxAssemblyListener;
			if (typedListener != null) typedListener.ExitValueConfiguration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRedFoxAssemblyVisitor<TResult> typedVisitor = visitor as IRedFoxAssemblyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitValueConfiguration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ConfigurationContext configuration() {
		ConfigurationContext _localctx = new ConfigurationContext(Context, State);
		EnterRule(_localctx, 2, RULE_configuration);
		try {
			State = 92;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case Width:
				_localctx = new WidthConfigurationContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 90;
				width();
				}
				break;
			case Value:
				_localctx = new ValueConfigurationContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 91;
				value();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class WidthContext : ParserRuleContext {
		public IToken val;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Width() { return GetToken(RedFoxAssemblyParser.Width, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Number() { return GetToken(RedFoxAssemblyParser.Number, 0); }
		public WidthContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_width; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRedFoxAssemblyListener typedListener = listener as IRedFoxAssemblyListener;
			if (typedListener != null) typedListener.EnterWidth(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRedFoxAssemblyListener typedListener = listener as IRedFoxAssemblyListener;
			if (typedListener != null) typedListener.ExitWidth(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRedFoxAssemblyVisitor<TResult> typedVisitor = visitor as IRedFoxAssemblyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitWidth(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public WidthContext width() {
		WidthContext _localctx = new WidthContext(Context, State);
		EnterRule(_localctx, 4, RULE_width);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 94;
			Match(Width);
			State = 95;
			_localctx.val = Match(Number);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ValueContext : ParserRuleContext {
		public IToken id;
		public WordContext val;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Value() { return GetToken(RedFoxAssemblyParser.Value, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Comma() { return GetToken(RedFoxAssemblyParser.Comma, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Identifier() { return GetToken(RedFoxAssemblyParser.Identifier, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public WordContext word() {
			return GetRuleContext<WordContext>(0);
		}
		public ValueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_value; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRedFoxAssemblyListener typedListener = listener as IRedFoxAssemblyListener;
			if (typedListener != null) typedListener.EnterValue(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRedFoxAssemblyListener typedListener = listener as IRedFoxAssemblyListener;
			if (typedListener != null) typedListener.ExitValue(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRedFoxAssemblyVisitor<TResult> typedVisitor = visitor as IRedFoxAssemblyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitValue(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ValueContext value() {
		ValueContext _localctx = new ValueContext(Context, State);
		EnterRule(_localctx, 6, RULE_value);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 97;
			Match(Value);
			State = 98;
			_localctx.id = Match(Identifier);
			State = 99;
			Match(Comma);
			State = 100;
			_localctx.val = word();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CommandContext : ParserRuleContext {
		public CommandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_command; } }
	 
		public CommandContext() { }
		public virtual void CopyFrom(CommandContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class InstructionCommandContext : CommandContext {
		[System.Diagnostics.DebuggerNonUserCode] public InstructionContext instruction() {
			return GetRuleContext<InstructionContext>(0);
		}
		public InstructionCommandContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRedFoxAssemblyListener typedListener = listener as IRedFoxAssemblyListener;
			if (typedListener != null) typedListener.EnterInstructionCommand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRedFoxAssemblyListener typedListener = listener as IRedFoxAssemblyListener;
			if (typedListener != null) typedListener.ExitInstructionCommand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRedFoxAssemblyVisitor<TResult> typedVisitor = visitor as IRedFoxAssemblyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInstructionCommand(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class LabelCommandContext : CommandContext {
		[System.Diagnostics.DebuggerNonUserCode] public LabelContext label() {
			return GetRuleContext<LabelContext>(0);
		}
		public LabelCommandContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRedFoxAssemblyListener typedListener = listener as IRedFoxAssemblyListener;
			if (typedListener != null) typedListener.EnterLabelCommand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRedFoxAssemblyListener typedListener = listener as IRedFoxAssemblyListener;
			if (typedListener != null) typedListener.ExitLabelCommand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRedFoxAssemblyVisitor<TResult> typedVisitor = visitor as IRedFoxAssemblyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLabelCommand(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CommandContext command() {
		CommandContext _localctx = new CommandContext(Context, State);
		EnterRule(_localctx, 8, RULE_command);
		try {
			State = 104;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case Label:
				_localctx = new LabelCommandContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 102;
				label();
				}
				break;
			case HLT:
			case NOP:
			case ADD:
			case SUB:
			case LSL:
			case LSR:
			case NEG:
			case NOT:
			case CMP:
			case JMP:
			case BFG:
			case BSR:
			case RTN:
			case RRB:
			case RRW:
			case RMB:
			case RMW:
			case WRB:
			case WRW:
			case WMB:
			case WMW:
			case RVB:
			case RVW:
			case SIN:
			case INT:
			case SFG:
			case AND:
			case LOR:
			case XOR:
				_localctx = new InstructionCommandContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 103;
				instruction();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LabelContext : ParserRuleContext {
		public IToken id;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Label() { return GetToken(RedFoxAssemblyParser.Label, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Identifier() { return GetToken(RedFoxAssemblyParser.Identifier, 0); }
		public LabelContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_label; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRedFoxAssemblyListener typedListener = listener as IRedFoxAssemblyListener;
			if (typedListener != null) typedListener.EnterLabel(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRedFoxAssemblyListener typedListener = listener as IRedFoxAssemblyListener;
			if (typedListener != null) typedListener.ExitLabel(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRedFoxAssemblyVisitor<TResult> typedVisitor = visitor as IRedFoxAssemblyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLabel(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LabelContext label() {
		LabelContext _localctx = new LabelContext(Context, State);
		EnterRule(_localctx, 10, RULE_label);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 106;
			Match(Label);
			State = 107;
			_localctx.id = Match(Identifier);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class InstructionContext : ParserRuleContext {
		public InstructionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_instruction; } }
	 
		public InstructionContext() { }
		public virtual void CopyFrom(InstructionContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class WRBInstructionContext : InstructionContext {
		[System.Diagnostics.DebuggerNonUserCode] public WrbContext wrb() {
			return GetRuleContext<WrbContext>(0);
		}
		public WRBInstructionContext(InstructionContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRedFoxAssemblyListener typedListener = listener as IRedFoxAssemblyListener;
			if (typedListener != null) typedListener.EnterWRBInstruction(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRedFoxAssemblyListener typedListener = listener as IRedFoxAssemblyListener;
			if (typedListener != null) typedListener.ExitWRBInstruction(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRedFoxAssemblyVisitor<TResult> typedVisitor = visitor as IRedFoxAssemblyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitWRBInstruction(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class RMBInstructionContext : InstructionContext {
		[System.Diagnostics.DebuggerNonUserCode] public RmbContext rmb() {
			return GetRuleContext<RmbContext>(0);
		}
		public RMBInstructionContext(InstructionContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRedFoxAssemblyListener typedListener = listener as IRedFoxAssemblyListener;
			if (typedListener != null) typedListener.EnterRMBInstruction(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRedFoxAssemblyListener typedListener = listener as IRedFoxAssemblyListener;
			if (typedListener != null) typedListener.ExitRMBInstruction(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRedFoxAssemblyVisitor<TResult> typedVisitor = visitor as IRedFoxAssemblyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRMBInstruction(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class RMWInstructionContext : InstructionContext {
		[System.Diagnostics.DebuggerNonUserCode] public RmwContext rmw() {
			return GetRuleContext<RmwContext>(0);
		}
		public RMWInstructionContext(InstructionContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRedFoxAssemblyListener typedListener = listener as IRedFoxAssemblyListener;
			if (typedListener != null) typedListener.EnterRMWInstruction(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRedFoxAssemblyListener typedListener = listener as IRedFoxAssemblyListener;
			if (typedListener != null) typedListener.ExitRMWInstruction(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRedFoxAssemblyVisitor<TResult> typedVisitor = visitor as IRedFoxAssemblyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRMWInstruction(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class WMWInstructionContext : InstructionContext {
		[System.Diagnostics.DebuggerNonUserCode] public WmwContext wmw() {
			return GetRuleContext<WmwContext>(0);
		}
		public WMWInstructionContext(InstructionContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRedFoxAssemblyListener typedListener = listener as IRedFoxAssemblyListener;
			if (typedListener != null) typedListener.EnterWMWInstruction(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRedFoxAssemblyListener typedListener = listener as IRedFoxAssemblyListener;
			if (typedListener != null) typedListener.ExitWMWInstruction(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRedFoxAssemblyVisitor<TResult> typedVisitor = visitor as IRedFoxAssemblyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitWMWInstruction(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class JMPInstructionContext : InstructionContext {
		[System.Diagnostics.DebuggerNonUserCode] public JmpContext jmp() {
			return GetRuleContext<JmpContext>(0);
		}
		public JMPInstructionContext(InstructionContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRedFoxAssemblyListener typedListener = listener as IRedFoxAssemblyListener;
			if (typedListener != null) typedListener.EnterJMPInstruction(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRedFoxAssemblyListener typedListener = listener as IRedFoxAssemblyListener;
			if (typedListener != null) typedListener.ExitJMPInstruction(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRedFoxAssemblyVisitor<TResult> typedVisitor = visitor as IRedFoxAssemblyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitJMPInstruction(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class WRWInstructionContext : InstructionContext {
